[gd_scene load_steps=92 format=2]

[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/SkeletonGreen/idle_00.png" type="Texture" id=2]
[ext_resource path="res://Assets/SkeletonGreen/idle_01.png" type="Texture" id=3]
[ext_resource path="res://Assets/SkeletonGreen/idle_02.png" type="Texture" id=4]
[ext_resource path="res://Assets/SkeletonGreen/idle_03.png" type="Texture" id=5]
[ext_resource path="res://Assets/SkeletonGreen/idle_04.png" type="Texture" id=6]
[ext_resource path="res://Assets/SkeletonGreen/idle_05.png" type="Texture" id=7]
[ext_resource path="res://Assets/SkeletonGreen/idle_06.png" type="Texture" id=8]
[ext_resource path="res://Assets/SkeletonGreen/idle_07.png" type="Texture" id=9]
[ext_resource path="res://Assets/SkeletonGreen/idle_08.png" type="Texture" id=10]
[ext_resource path="res://Assets/SkeletonGreen/idle_09.png" type="Texture" id=11]
[ext_resource path="res://Assets/SkeletonGreen/idle_10.png" type="Texture" id=12]
[ext_resource path="res://Assets/SkeletonGreen/idle_11.png" type="Texture" id=13]
[ext_resource path="res://Assets/SkeletonGreen/idle_12.png" type="Texture" id=14]
[ext_resource path="res://Assets/SkeletonGreen/idle_13.png" type="Texture" id=15]
[ext_resource path="res://Assets/SkeletonGreen/idle_14.png" type="Texture" id=16]
[ext_resource path="res://Assets/SkeletonGreen/idle_15.png" type="Texture" id=17]
[ext_resource path="res://Assets/SkeletonGreen/idle_16.png" type="Texture" id=18]
[ext_resource path="res://Assets/SkeletonGreen/idle_17.png" type="Texture" id=19]
[ext_resource path="res://Assets/SkeletonGreen/die_00.png" type="Texture" id=20]
[ext_resource path="res://Assets/SkeletonGreen/die_01.png" type="Texture" id=21]
[ext_resource path="res://Assets/SkeletonGreen/die_02.png" type="Texture" id=22]
[ext_resource path="res://Assets/SkeletonGreen/die_03.png" type="Texture" id=23]
[ext_resource path="res://Assets/SkeletonGreen/die_04.png" type="Texture" id=24]
[ext_resource path="res://Assets/SkeletonGreen/die_05.png" type="Texture" id=25]
[ext_resource path="res://Assets/SkeletonGreen/die_06.png" type="Texture" id=26]
[ext_resource path="res://Assets/SkeletonGreen/die_07.png" type="Texture" id=27]
[ext_resource path="res://Assets/SkeletonGreen/die_08.png" type="Texture" id=28]
[ext_resource path="res://Assets/SkeletonGreen/die_09.png" type="Texture" id=29]
[ext_resource path="res://Assets/SkeletonGreen/die_10.png" type="Texture" id=30]
[ext_resource path="res://Assets/SkeletonGreen/die_11.png" type="Texture" id=31]
[ext_resource path="res://Assets/SkeletonGreen/die_12.png" type="Texture" id=32]
[ext_resource path="res://Assets/SkeletonGreen/hurt_00.png" type="Texture" id=33]
[ext_resource path="res://Assets/SkeletonGreen/hurt_01.png" type="Texture" id=34]
[ext_resource path="res://Assets/SkeletonGreen/hurt_02.png" type="Texture" id=35]
[ext_resource path="res://Assets/SkeletonGreen/hurt_03.png" type="Texture" id=36]
[ext_resource path="res://Assets/SkeletonGreen/hurt_04.png" type="Texture" id=37]
[ext_resource path="res://Assets/SkeletonGreen/hurt_05.png" type="Texture" id=38]
[ext_resource path="res://Assets/SkeletonGreen/hurt_06.png" type="Texture" id=39]
[ext_resource path="res://Assets/SkeletonGreen/hurt_07.png" type="Texture" id=40]
[ext_resource path="res://Assets/SkeletonGreen/hurt_08.png" type="Texture" id=41]
[ext_resource path="res://Assets/SkeletonGreen/hurt_09.png" type="Texture" id=42]
[ext_resource path="res://Assets/SkeletonGreen/hurt_10.png" type="Texture" id=43]
[ext_resource path="res://Assets/SkeletonGreen/hurt_11.png" type="Texture" id=44]
[ext_resource path="res://Assets/SkeletonGreen/hurt_12.png" type="Texture" id=45]
[ext_resource path="res://Assets/SkeletonGreen/hurt_13.png" type="Texture" id=46]
[ext_resource path="res://Assets/SkeletonGreen/hurt_14.png" type="Texture" id=47]
[ext_resource path="res://Assets/SkeletonGreen/hurt_15.png" type="Texture" id=48]
[ext_resource path="res://Assets/SkeletonGreen/walk_00.png" type="Texture" id=49]
[ext_resource path="res://Assets/SkeletonGreen/walk_01.png" type="Texture" id=50]
[ext_resource path="res://Assets/SkeletonGreen/walk_02.png" type="Texture" id=51]
[ext_resource path="res://Assets/SkeletonGreen/walk_03.png" type="Texture" id=52]
[ext_resource path="res://Assets/SkeletonGreen/walk_04.png" type="Texture" id=53]
[ext_resource path="res://Assets/SkeletonGreen/walk_05.png" type="Texture" id=54]
[ext_resource path="res://Assets/SkeletonGreen/walk_06.png" type="Texture" id=55]
[ext_resource path="res://Assets/SkeletonGreen/walk_07.png" type="Texture" id=56]
[ext_resource path="res://Assets/SkeletonGreen/walk_08.png" type="Texture" id=57]
[ext_resource path="res://Assets/SkeletonGreen/walk_09.png" type="Texture" id=58]
[ext_resource path="res://Assets/SkeletonGreen/walk_10.png" type="Texture" id=59]
[ext_resource path="res://Assets/SkeletonGreen/walk_11.png" type="Texture" id=60]
[ext_resource path="res://Assets/SkeletonGreen/walk_12.png" type="Texture" id=61]
[ext_resource path="res://Assets/SkeletonGreen/walk_13.png" type="Texture" id=62]
[ext_resource path="res://Assets/SkeletonGreen/walk_14.png" type="Texture" id=63]
[ext_resource path="res://Assets/SkeletonGreen/walk_15.png" type="Texture" id=64]
[ext_resource path="res://Assets/SkeletonGreen/walk_16.png" type="Texture" id=65]
[ext_resource path="res://Assets/SkeletonGreen/walk_17.png" type="Texture" id=66]
[ext_resource path="res://Assets/SkeletonGreen/walk_18.png" type="Texture" id=67]
[ext_resource path="res://Assets/SkeletonGreen/walk_19.png" type="Texture" id=68]
[ext_resource path="res://Assets/SkeletonGreen/attack_00.png" type="Texture" id=69]
[ext_resource path="res://Assets/SkeletonGreen/attack_01.png" type="Texture" id=70]
[ext_resource path="res://Assets/SkeletonGreen/attack_02.png" type="Texture" id=71]
[ext_resource path="res://Assets/SkeletonGreen/attack_03.png" type="Texture" id=72]
[ext_resource path="res://Assets/SkeletonGreen/attack_04.png" type="Texture" id=73]
[ext_resource path="res://Assets/SkeletonGreen/attack_05.png" type="Texture" id=74]
[ext_resource path="res://Assets/SkeletonGreen/attack_06.png" type="Texture" id=75]
[ext_resource path="res://Assets/SkeletonGreen/attack_07.png" type="Texture" id=76]
[ext_resource path="res://Assets/SkeletonGreen/attack_08.png" type="Texture" id=77]
[ext_resource path="res://Assets/SkeletonGreen/attack_09.png" type="Texture" id=78]
[ext_resource path="res://Assets/SkeletonGreen/attack_10.png" type="Texture" id=79]
[ext_resource path="res://Assets/SkeletonGreen/attack_11.png" type="Texture" id=80]
[ext_resource path="res://Assets/SkeletonGreen/attack_12.png" type="Texture" id=81]
[ext_resource path="res://Assets/SkeletonGreen/attack_13.png" type="Texture" id=82]
[ext_resource path="res://Assets/SkeletonGreen/attack_14.png" type="Texture" id=83]
[ext_resource path="res://Assets/SkeletonGreen/attack_15.png" type="Texture" id=84]
[ext_resource path="res://Assets/SkeletonGreen/attack_16.png" type="Texture" id=85]
[ext_resource path="res://Assets/SkeletonGreen/attack_17.png" type="Texture" id=86]
[ext_resource path="res://Assets/SkeletonGreen/attack_18.png" type="Texture" id=87]
[ext_resource path="res://Assets/SkeletonGreen/attack_19.png" type="Texture" id=88]
[ext_resource path="res://UI/UnitDisplay.tscn" type="PackedScene" id=89]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 7.89526, 12.7974 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": false,
"name": "die",
"speed": 12.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ) ],
"loop": false,
"name": "hurt",
"speed": 12.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
}, {
"frames": [ ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ) ],
"loop": false,
"name": "attack",
"speed": 12.0
} ]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "attack"
frame = 8

[node name="edge_detector" type="RayCast2D" parent="."]
position = Vector2( 20.3106, 0.0944692 )
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 2

[node name="player_detector_front" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 80, 0 )
collision_mask = 4

[node name="player_detector_back" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -35, 0 )
collision_mask = 4

[node name="player_in_range_detector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 18, 0 )
collision_mask = 4

[node name="UnitDisplay" parent="." instance=ExtResource( 89 )]

[node name="after_death_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="wait_near_edge_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="visibility_timer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="health_changed" from="." to="UnitDisplay" method="update_healthbar"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_frame_changed"]
[connection signal="timeout" from="after_death_timer" to="." method="_on_after_death_timer_timeout"]
[connection signal="timeout" from="wait_near_edge_timer" to="." method="_on_wait_near_edge_timer_timeout"]
[connection signal="timeout" from="visibility_timer" to="." method="_on_visibility_timer_timeout"]
